--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "vcard2rimedict"
+name = "rime_dict_maker"
 version = "0.1.0"
 description = "Convert iCloud vcard to rime dict file"
 authors = [
